--- a/QuanLySanPham/QuanLySanPham.csproj
+++ b/QuanLySanPham/QuanLySanPham.csproj
@@ -57,9 +57,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="akgul.Maui.DataGrid" Version="4.0.5" />
+		<PackageReference Include="BouncyCastle" Version="1.8.9" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Conholdate.Total" Version="24.9.0" />
+		<PackageReference Include="IronPdf.Extensions.Maui" Version="2024.5.2" />
+		<PackageReference Include="itext7" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.93" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 	</ItemGroup>
