--- a/QuanLySanPham/QuanLySanPham.csproj
+++ b/QuanLySanPham/QuanLySanPham.csproj
@@ -57,7 +57,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BouncyCastle" Version="1.8.9" />
+	  <None Remove="Resources\Images\background.jpg" />
+	  <None Remove="Resources\Images\cashier_icon.png" />
+	  <None Remove="Resources\Images\icon.png" />
+	  <None Remove="Resources\Images\login_icon.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
 		<PackageReference Include="Conholdate.Total" Version="24.9.0" />
@@ -76,6 +82,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="View\EditSanPham.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\Login.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
