--- a/QuanLySanPham/QuanLySanPham.csproj
+++ b/QuanLySanPham/QuanLySanPham.csproj
@@ -88,6 +88,9 @@
 	  <MauiXaml Update="View\Login.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\SaveFilePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\ViewHistory.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
